# rknpu

./: .gitreview  README.md  S99NPU_init  S99NPU_init_rk3399pro-npu
drivers/: README  cl_viv_vx_ext.h  galcore.ko  galcore_fedora.ko
drivers/common/etc/init.d/: S05NPU_init  S60NPU_init
drivers/common/usr/lib/: cl_viv_vx_ext.h
drivers/linux-aarch64-mini/usr/lib/: libOpenVX.so.1.2
drivers/linux-aarch64-mini/usr/lib/npu/rknn/: memory_profile
drivers/linux-aarch64/usr/lib/: libOpenCL.so.1.2  libOpenVX.so.1.2
drivers/linux-aarch64/usr/lib/npu/rknn/: memory_profile
drivers/linux-armhf-mini/usr/lib/: libOpenVX.so.1.2
drivers/linux-armhf-mini/usr/lib/npu/rknn/: memory_profile
drivers/linux-armhf-puma-mini/usr/lib/: libOpenVX.so.1.2
drivers/linux-armhf-puma/usr/lib/: libOpenCL.so.1.2  libOpenVX.so.1.2
drivers/linux-armhf-puma/usr/lib/npu/rknn/: memory_profile
drivers/linux-armhf/usr/lib/: libOpenCL.so.1.2  libOpenVX.so.1.2
drivers/linux-armhf/usr/lib/npu/rknn/: memory_profile
drivers/npu_ko/: galcore.ko  galcore_fedora.ko  galcore_puma.ko  galcore_puma_tb.ko  galcore_rk1806.ko  galcore_rk3399pro-npu-pcie.ko  galcore_rk3399pro-npu.ko
nputest/lenet_int8/: cl_viv_vx_ext.h  run.sh
rknn/: rknn_runtime.h
rknn-toolkit/: changelog-v0.9.6.txt  changelog-v0.9.8.txt
rknn-toolkit/doc/: changelog-v0.9.7.1.txt
rknn-toolkit/example/fast-rcnn-zf/: dataset.txt  faster_rcnn_zf.py  im_info.txt
rknn-toolkit/example/fast-rcnn-zf/util/: bbox_transform.py  nms.py
rknn-toolkit/example/mobilenet-ssd/: ssd.py
rknn-toolkit/example/mobilenet_v1/: test.py
rknn-toolkit/example/mobilenet_v2/: test.py
rknn-toolkit/package/: requirements.txt  requires.txt
rknn/examples/libs/opencv/lib64/: libopencv_core.so.3.4  libopencv_imgcodecs.so.3.4  libopencv_imgproc.so.3.4
rknn/examples/rknn_mobilenet_demo/: CMakeLists.txt  README.md
rknn/examples/rknn_mobilenet_demo/src/: main.cc
rknn/examples/rknn_ssd_demo/: CMakeLists.txt
rknn/examples/rknn_ssd_demo/src/: main.cc  ssd.cc  ssd.h
rknn/examples/rknn_yolo_demo/: CMakeLists.txt
rknn/examples/rknn_yolo_demo/src/: main.cc
rknn/include/: rknn_runtime.h
rknn/python/: rknn1808-1.2.0-cp36-cp36m-linux_aarch64.whl  rknn1808-1.2.0-cp37-cp37m-linux_aarch64.whl  rknn_toolkit-0.9.8.1-cp36-cp36m-linux_aarch64.whl
rknn/python/example/mobilenet_v1/: test.py
rknn/python/rknn/: README  __init__.py
rknn/python/rknn/api/: __init__.py  rknn.py
rknn/rknn_api/examples/libs/librknn_api/include/: rknn_api.h
rknn/rknn_api/examples/libs/opencv/lib/: libopencv_core.so.3.4  libopencv_core.so.3.4.1  libopencv_highgui.so.3.4  libopencv_highgui.so.3.4.1  libopencv_imgcodecs.so.3.4  libopencv_imgcodecs.so.3.4.1  libopencv_imgproc.so.3.4  libopencv_imgproc.so.3.4.1
rknn/rknn_api/examples/libs/opencv/lib64/: libopencv_highgui.so.3.4
rknn/rknn_api/examples/rknn_batch_inference_demo/: CMakeLists.txt  README.md  build.sh  run_rk180x.sh  run_rv1109_rv1126.sh
rknn/rknn_api/examples/rknn_batch_inference_demo/model/rv1109_rv1126/: mobilenet_v1_rv1109_rv1126_batch_4.rknn
rknn/rknn_api/examples/rknn_batch_inference_demo/src/: main.cc
rknn/rknn_api/examples/rknn_mobilenet_demo/: CMakeLists.txt  README.md  build.sh  run_rk180x.sh  run_rv1109_rv1126.sh
rknn/rknn_api/examples/rknn_mobilenet_demo/model/: mobilenet_v1_rv1109_rv1126.rknn
rknn/rknn_api/examples/rknn_mobilenet_demo/src/: main.cc
rknn/rknn_api/examples/rknn_multi_input_demo/: CMakeLists.txt  README.md  build.sh  run_rk180x.sh  run_rv1109_rv1126.sh
rknn/rknn_api/examples/rknn_multi_input_demo/model/rk180x/: multi_input_rk180x.rknn
rknn/rknn_api/examples/rknn_multi_input_demo/model/rv1109_rv1126/: multi_input_rv1109_rv1126.rknn
rknn/rknn_api/examples/rknn_multi_input_demo/src/: main.cc
rknn/rknn_api/examples/rknn_pass_through_demo/: CMakeLists.txt  README.md  build.sh  run_rk180x.sh  run_rv1109_rv1126.sh
rknn/rknn_api/examples/rknn_pass_through_demo/model/rv1109_rv1126/: mobilenet_v1_INT8_rv1109_rv1126.rknn  mobilenet_v1_UINT8_rv1109_rv1126.rknn  mobilenet_v2_INT8_rv1109_rv1126.rknn  mobilenet_v2_UINT8_rv1109_rv1126.rknn
rknn/rknn_api/examples/rknn_pass_through_demo/src/: main.cc  quant_utils.cc  quant_utils.h
rknn/rknn_api/examples/rknn_ssd_demo/: CMakeLists.txt  README.md  build.sh
rknn/rknn_api/examples/rknn_ssd_demo/model/: box_priors.txt
rknn/rknn_api/examples/rknn_ssd_demo/src/: main.cc  ssd.cc  ssd.h
rknn/rknn_api/examples/rknn_yolo_demo/: CMakeLists.txt  README.md
rknn/rknn_api/examples/rknn_yolo_demo/src/: main.cc  yolov3_post_process.cc  yolov3_post_process.h
rknn/rknn_api/examples/rknn_yolov5_demo/: CMakeLists.txt  README.md  build.sh  run_rk180x.sh  run_rv1109_rv1126.sh
rknn/rknn_api/examples/rknn_yolov5_demo/convert_rknn_demo/yolov5/: onnx2rknn.py  pytorch2rknn.py
rknn/rknn_api/examples/rknn_yolov5_demo/src/: main.cc  postprocess.cc  rga_func.c
rknn/rknn_api/examples/rknn_zero_copy_demo/: CMakeLists.txt  README.md  build.sh  run_rk180x.sh  run_rv1109_rv1126.sh
rknn/rknn_api/examples/rknn_zero_copy_demo/include/: postprocess.h  rga_func.h
rknn/rknn_api/examples/rknn_zero_copy_demo/src/: main.cc  postprocess.cc  rga_func.c
rknn/rknn_api/librknn_api/include/: rknn_api.h
rknn/rknn_utils/: CMakeLists.txt  README.md  build.sh
rknn/rknn_utils/example/: matmul_sample.c
rknn/rknn_utils/librknn_utils/include/: rknn_matmul_api.h
rknn/usr/lib/npu/rknn/: memory_profile
rknnrt/common/etc/init.d/: S60NPU_init
rknnrt/lib/linux-aarch64/driver/: rknpu.ko
rknnrt/lib/linux-armhf/driver/: rknpu.ko
test/lenet_u8/: lenet_u8.export.data  run.sh
